# gidtools_utils

./: .gitignore  MANIFEST.in  [gidtools+]_external_dependencies.txt  [gidtools_utils+]_external_dependencies.txt  dev_install_this_package.cmd  make_dist.cmd  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.py
gidtools/: __init__.py
gidtools/gidappdata/: __init__.py  classes.py  factories.py
gidtools/gidcolor/: __init__.py  enums.py
gidtools/gidconfig/: __init__.py  classes.py  data.py  factories.py  functions.py
gidtools/gidfiles/: __init__.py  classes.py  data.py  exceptions.py  functions.py
gidtools/gidjinja/: classes.py  data.py  functions.py
gidtools/gidsql/: builder.py  db_action_base.py  db_reader.py  db_writer.py  exceptions.py  execution_handling.py  facade.py  phrasers.py  script_handling.py  sql_phraser.py
gidtools/gidssentials/: __init__.py  classes.py  data.py  functions.py
gidtools/gidstuff/: __init__.py  classes.py  data.py  exception_classes.py  functions.py
gidtools/gidtriumvirate/: __init__.py  classes.py  data.py  functions.py  sql_classes.py  sql_phraser.py
misc/archive/: sample_config.ini
test/: gidfiles_test.py
tests/test_gidfiles/: conftest.py  test_gidfiles.py
tests/test_gidsql/: conftest.py  insert_script.sql  test_db.db  (+4 more)
tools/: _project_meta.env  convert_requirements_dev_to_normal.py  create_venv.cmd  log_pipe_create_venv.cmd  memory_profiling_time.cmd  memory_profiling_time__main__.cmd  profiling_to_graph.cmd  profiling_to_graph__main__.cmd  profiling_to_text.cmd  profiling_to_text__main__ .cmd
(+32 files in other folders)
