[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "gidtools"
author = "Giddius"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
	"fuzzywuzzy==0.18.0",
	"gidlogger==0.1",
	"Jinja2==2.11.2",
	"MarkupSafe==1.1.1",
	"python-dotenv==0.14.0",
	"python-Levenshtein==0.12.0",
]





[tool.flit.scripts]
